# fake-news-detection-api

./: .gitattributes  .gitignore  download_image_model.py  main.py  pyproject.toml  render-build.sh
local_deepfake_model/: config.json  model.safetensors  preprocessor_config.json
models/: lr_model.jb  models.py  vectorizer.jb
